--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,61 @@
 .App {
-  text-align: center;
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  background-color: #dcdcdc;
+  justify-content: center;
+  align-items: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.Note {
+  margin: 0 auto;
+  padding: 1%;
+  width: 80%;
+  height: 80vh;
+  background-color: #fdf5e6;
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  position: relative;
 }
 
-.App-link {
-  color: #61dafb;
+.NoteBtn {
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.NoteBtn button {
+  border: 2px solid #ffc0cb;
+  border-radius: 45px;
+  background-color: #ffe4e1;
+  width: 16vh;
+  height: 6vh;
+  font-weight: bold;
+  font-size: 2vh;
+  margin: 0;
+}
+
+.noteTitle {
+  background-color: #b0c4de;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 8%;
+  margin: 2%;
+  position: absolute;
+  width: 90%;
+  top: 0;
+  z-index: 100;
+}
+
+.noteTitle h2 {
+  font-style: italic;
+  font-size: 4vh;
+  margin-left: 2%;
+}
+.Main {
+  margin-right: 2%;
+  cursor: pointer;
 }
